--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <meta charset="UTF-8"/>
 
  <style>
- body { font-family: Comic Sans; background-color: yellow; color: black}
+ body { font-family: Comic Sans; background-color: green; color: black}
  img { height:20%; width: 20% }
  h1 { text-aligh: center; }
  
