--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <meta charset="UTF-8"/>
 
  <style>
- body { font-family: Comic Sans; background-color: green; color: black}
+ body { font-family: Comic Sans MS; background-color: lightgreen; color: black}
  img { height:20%; width: 20% }
  h1 { text-aligh: center; }
  
@@ -17,11 +17,11 @@
  <img src="https://cdn.pixabay.com/photo/2024/02/19/09/53/ai-generated-8583048_1280.jpg" alt="Business Woman"/>
 
  <h1>Taylor Smith</h1>
- <h3>Adresse:<h3><p> Lighthouse street 29, 9638 Rosewood</p>
- <h3>Contact details:</h3> <p>Phone: +23 5678 567</p>
- <p>Email: taylor.smith@gmail.com</p>
+ <h4>Adresse: <h4><p>Lighthouse street 29, 9638 Rosewood</p>
+ <h4>Phone: <h4><p>+23 5678 567</p>
+ <h4>Email: <h4><p>taylor.smith@gmail.com</p>
  
- <h2>About me</h2>
+ <h3>About me</h3>
  <p> Hi! My name is Taylor Smith and I am a software developer. My company is called Hola and we offer many services as.....</p>
 </body>
 
